--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Practica 0: Introducción a Git y sus comandos</title>
-    <meta author="Antonio Torres Mora" description="Introducción a Git">
+    <meta author="Antonio Torres Mora" description="Introducción a comandos Git">
 </head>
 <body>
     <ol>
